@@ -4,6 +4,7 @@ S3method(fortify,compareClusterResult)
 export(GSEA)
 export(Gff2GeneTable)
 export(bitr)
+export(bitr_kegg)
 export(buildGOmap)
 export(compareCluster)
 export(dropGO)
@@ -24,6 +25,7 @@ export(merge_result)
 export(plot)
 export(plotGOgraph)
 export(read.gmt)
+export(search_kegg_organism)
 exportClasses(compareClusterResult)
 exportClasses(groupGOResult)
 exportMethods(dotplot)
