@@ -1,5 +1,32 @@
+##' search kegg organism, listed in http://www.genome.jp/kegg/catalog/org_list.html
+##'
+##' 
+##' @title search_kegg_organism
+##' @param str string
+##' @param by one of 'kegg.code', 'scientific_name' and 'common_name'
+##' @param ignore.case TRUE or FALSE
+##' @return data.frame
+##' @export
+##' @author Guangchuang Yu
+search_kegg_organism <- function(str, by="scientific_name", ignore.case=FALSE) {
+    by <- match.arg(by, c("kegg_code", "scientific_name", "common_name"))
+    kegg_species <- kegg_species_data()
+    idx <- grep(str, kegg_species[, by], ignore.case = ignore.case)
+    kegg_species[idx,]
+}
+
+
+kegg_species_data <- function() {
+    utils::data(list="kegg_species", package="clusterProfiler")
+    get("kegg_species", envir = .GlobalEnv)
+}
+
 get_kegg_species <- function() {
-    x <- XML::readHTMLTable("http://www.genome.jp/kegg/catalog/org_list.html") 
+    pkg <- "XML"
+    requireNamespace(pkg)
+    readHTMLTable <- eval(parse(text="XML::readHTMLTable"))
+    x <- readHTMLTable("http://www.genome.jp/kegg/catalog/org_list.html") 
+
     y <- get_species_name(x[[2]], "Eukaryotes")
     y2 <- get_species_name(x[[3]], 'Prokaryotes')
     
@@ -41,3 +68,26 @@ get_species_name_idx <- function(y, table='Eukaryotes') {
 }
 
 
+kegg_rest <- function(rest_url) {
+    content <- tryCatch(suppressWarnings(readLines(rest_url)), error=function(e) NULL)
+    if (is.null(content))
+        return(content)
+
+    content %<>% strsplit(., "\t") %>% do.call('rbind', .)
+    res <- data.frame(from=content[,1],
+                      to=content[,2])
+    return(res)
+}
+
+## http://www.genome.jp/kegg/rest/keggapi.html
+## kegg_link('hsa', 'pathway')
+kegg_link <- function(target_db, source_db) {
+    url <- paste0("http://rest.kegg.jp/link/", target_db, "/", source_db, collapse="")
+    kegg_rest(url)
+}
+
+
+kegg_list <- function(db) {
+    url <- paste0("http://rest.kegg.jp/list/", db, collapse="")
+    kegg_rest(url)
+}
