@@ -4,11 +4,15 @@
 \name{DataSet}
 \alias{DataSet}
 \alias{gcSample}
+\alias{kegg_species}
 \title{Datasets
 gcSample contains a sample of gene clusters.}
 \description{
 Datasets
 gcSample contains a sample of gene clusters.
+
+Datasets
+kegg_species contains kegg species information
 }
 \keyword{datasets}
 
