@@ -4,14 +4,16 @@
 \alias{gseMKEGG}
 \title{gseMKEGG}
 \usage{
-gseMKEGG(geneList, organism = "hsa", exponent = 1, nPerm = 1000,
-  minGSSize = 10, maxGSSize = 500, pvalueCutoff = 0.05,
+gseMKEGG(geneList, organism = "hsa", keyType = "kegg", exponent = 1,
+  nPerm = 1000, minGSSize = 10, maxGSSize = 500, pvalueCutoff = 0.05,
   pAdjustMethod = "BH", verbose = TRUE, seed = FALSE)
 }
 \arguments{
 \item{geneList}{order ranked geneList}
 
 \item{organism}{supported organism listed in 'http://www.genome.jp/kegg/catalog/org_list.html'}
+
+\item{keyType}{one of "kegg", 'ncbi-geneid', 'ncib-proteinid' and 'uniprot'}
 
 \item{exponent}{weight of each step}
 
